# sania

./: .gitignore  LICENSE  README.md  all_install.bat  main.ipynb  main.py  pyproject.toml  start.bat
base/: __init__.py
config/: __init__.py  company_bases.py  env_data.py  scripts.py
data/cities/: 1.иностранные города.txt  2.российские города.txt
data/companies/: 1.иностранные компании.txt  2.российские компании.txt
data/vacancies/: 2.российские вакансии.txt  3.спец.вакансии.txt
utils/: __init__.py  driver.py  telegram.py  tk_.py  types.py
